Fixed size issues and grid layout issue

--- a/src/assets/styles/base/base.css
+++ b/src/assets/styles/base/base.css
@@ -24,4 +24,10 @@ a:not([class~=footer-link]):not([class~=footer-link-dark]) {
 
 a:hover {
   cursor: pointer;
+}
+
+@media screen and (min-width: 769px) {
+  .row {
+    font-size: 1.1rem !important;
+  }
 }/*# sourceMappingURL=base.css.map */
