--- a/src/assets/styles/components/home/home.scss
+++ b/src/assets/styles/components/home/home.scss
@@ -36,7 +36,7 @@
   }
 
   .header-banner {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
 
   .mainbanner-img {
@@ -47,7 +47,7 @@
 
 @media screen and (min-width: 960px) {
   .header-banner {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .mainbanner-img {
